@@ -33,7 +33,7 @@ my $build = ModuleBuildBuilder->new(
     'File::Temp'            => 0.15,    # tmpdir() + fixes
     'Test::More'            => 0.49,
     'Test::Harness'         => 3.16,    # PERL5LIB fixes
-    'Parse::CPAN::Meta'     => '1.420',
+    'Parse::CPAN::Meta'     => '1.4401',
   },
   # KEEP 'requires' as low as possible and target Build/test/install
   # Requirements for authors should be implemented as optional features
@@ -57,7 +57,7 @@ my $build = ModuleBuildBuilder->new(
     'Text::ParseWords'      => 0,
     'Getopt::Long'          => 0,
     'Test::Harness'         => 0,
-    'CPAN::Meta'            => '2.110390',
+    'CPAN::Meta'            => '2.110420',
     'Perl::OSType'          => 1, # needs 1.0 API
     'version'               => 0.87,  # No longer requires M::B
     'Module::Metadata'      => 1.000002, # uses version.pm
